# zillow-etl

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  prefect.yaml  property.parquet  pyproject.toml  test.csv
.github/workflows/: pytest.yml  static-analysis.yml
src/flows/: attributes.py  orchestrator.py  pricing.py  pull_listing.py  queryset.py  utility.py
src/zillow/: blocks.py  mongodb.py  property_model.py  query.py  query_model.py  recently_modified.py  sitemap.py  sitemap_model.py
src/zillow/cli/: entrypoint.py
src/zillow/extract/: listing.py  site_map_index.py
src/zillow/individual_property/: property_model.py
src/zillow/individual_property/transform/: listing.py
src/zillow/mongo_models/: db.py  query_config.py  sitemap_model.py
src/zillow/searchset/: query_model.py
src/zillow/transform/: listing.py
tests/: conftest.py  fixtures_mongo.py  fixtures_prefect.py  fixtures_zillow.py  test_sitemap.py
tests/assets/response/: first_page.json  listing.html  listing.json  second_page.json  sitemap-index.html
tests/assets/transform/: parsed_page.parquet
tests/flows/: test_orchestrator.py  test_pull_listing.py
tests/zillow/: test_property_model.py  test_query.py  test_sitemap.py  test_sitemap_model.py
tests/zillow/extract/: test_listing.py  test_sitemap_index.py
tests/zillow/individual_property/extract/: test_listing.py
tests/zillow/individual_property/transform/: test_listings.py
tests/zillow/mongo_models/: test_sitemap_model.py
tests/zillow/transform/: test_listings.py
