[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "zillow-etl"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.11"
# Don't need dependencies, those should be installed in the container
# and are managed by pipenv
dependencies = [
    "beautifulsoup4>=4.12.3",
    "getuseragent>=0.0.7",
    "mongomock>=4.2.0.post1",
    "moto[s3]>=5.0.20",
    "orjson>=3.10.11",
    "polars>=1.12.0",
    "prefect-aws>=0.4.20",
    "pydantic-extra-types>=2.10.0",
    "pydantic-mongo>=2.3.0",
    "pymongo>=4.10.1",
    "respx>=0.21.1",
]
license.file = "LICENSE"

[project.scripts]
template = "zillow.cli:cli"

[tool.interrogate]
exclude = ["tests/"]
ignore-init-module = true

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[dependency-groups]
dev = [
    "click>=8.1.7",
    "pre-commit>=4.0.1",
    "prefect<3.0.0",
    "prefecto>=1.1.1",
    "pydantic>=2.9.2",
    "pytest>=8.3.3",
]
